# foobar-conan

./: .gitignore  CMakeLists.txt  conanfile.txt
include/: foo.hpp
src/: CMakeLists.txt  bar.hpp  foo.cpp
src/zip/: CMakeLists.txt  bar.cpp
test/: CMakeLists.txt
test/utest/: CMakeLists.txt  main.cpp
